# python-kyy

./: .gitignore  README.md  pyproject.toml  test.py
examples/: arvauspeli.kyy  eläimet.kyy  testi.kyy
kyy/: __imports.py  __main__.py  classes.py  error.py  functions.py  lexicon.py  name.py
