[tool.poetry]
name = "python-kyy"
version = "0.1.0"
description = "A Finnish language variant of the Python programming language."
authors = ["Tero Niemi <talamus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
voikko = "^0.5"
black = "^22.10.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
